# lcc-docs

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  i18n.py  main.py  pyproject.toml  settings.py  tbump.toml
.github/workflows/: ci.yml
db/: author_pseudos.json  mods.json  mods_cn.json  mods_cn_translated.json  mods_en.json  mods_fr.json  mods_pl.json  translations.json
docs/: index.html
docs/cn/: index.html
docs/en/: index.html
docs/fr/: index.html
docs/pl/: index.html
docs/static/css/: list.css
docs/static/img/: ie_games_bg.avif  ie_games_bgt.avif  ie_games_eet.avif  ie_games_iwd.avif  ie_games_iwd2.avif  ie_games_iwdee.avif  ie_games_pst.avif  ie_games_pstee.avif  ie_games_tutu.avif
docs/static/js/: main.js  modal.js
docs/templates/: base.html  category.html  header.html  home_page.html  list_page.html  mod.html  modal.html  search.html
locales/: messages.pot
locales/cn/LC_MESSAGES/: messages.mo  messages.po
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/fr/LC_MESSAGES/: messages.mo  messages.po
locales/pl/LC_MESSAGES/: messages.mo  messages.po
models/: mod.py  url.py
scripts/: check_mods_json.py  create_mods_translation.py  extract_tra_text.py  merge_tra_text.py  update_index.py  update_translations.py  utils.py
scripts/cleaner/: ini.py  readme.py  tp2.py  utils.py
scripts/i18n/: create_mods_translation.py  extract_tra_text.py  merge_tra_text.py  update_translations.py
scripts/manager/: __init__.py  ini.py  readme.py  tp2.py  utils.py
scripts/scrap/: check_list_k4thos.py
tests/: test_cleaner.py  test_manager.py  test_mod.py  test_url.py
