[project]
name = "Lcc-Mod-List"
version = "3.3.0"
description = "Liste des mods de l'infinity engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "curl-cffi>=0.10.0",
    "iteration-utilities>=0.13.0",
    "jinja2>=3.1.5",
    "pydantic>=2.11.5",
    "pygithub>=2.5.0",
]

[tool.pyright]
ignore = [".venv/"]
venv = "./.venv"
venvPath = "."
pythonVersion = "3.11"
# typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportMissingImports = false
reportIncompatibleMethodOverride = false

[tool.ruff]
exclude = [".venv/"]
line-length = 96
include = ["**/pyproject.toml", "*.py"]
extend-exclude = ["__pycache__", ".venv"]
target-version = "py311"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select = ["F", "I", "E", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
length-sort = false
force-single-line = false
force-sort-within-sections = true
known-first-party = ["models", "scripts", "tests"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
disable_error_code = ["import-untyped", "import-not-found"]
